<resources>
    <string name="app_name">Tabata timer</string>
    <string name="title_activity_timer">TimerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title">Title</string>
    <string name="sets">Sets</string>
    <string name="upper_set">SET</string>
    <string name="upper_work_it">WORK</string>
    <string name="upper_get_ready">WARM UP</string>
    <string name="upper_rest_now">REST</string>
    <string name="upper_cool_down">COOL DOWN</string>
    <string name="work_interval">Work Interval</string>
    <string name="warm_up_interval">Warm Up Interval</string>
    <string name="cool_down_interval">Cool Down Interval</string>
    <string name="rest_interval">Rest Interval</string>
    <string name="upper_start">START</string>
    <string name="upper_done">DONE!</string>
    <string name="desc_minus">minus</string>
    <string name="desc_plus">plus</string>
    <string name="desc_pause_play">pause or play</string>
    <string name="desc_replay">replay</string>
    <string name="desc_stop">stop</string>
    <string name="desc_sound_off_on">sound off or on</string>
    <string name="time">00:10</string>
    <string name="set_number">1</string>
    <string name="ini_time">00:06</string>
    <string name="upper_phases">PHASES</string>
    <string name="upper_save">SAVE</string>
    <string name="upper_delete">DELETE</string>
    <string name="upper_create_new">CREATE NEW</string>

    <string name="msg_saved">Workout was saved successfully</string>
    <string name="msg_not_saved">Workout was not saved. All fields should be filled</string>
    <string name="msg_title_already_exist">Workout with such name already exist</string>
    <string name="msg_deleted">Workout was deleted successfully</string>

    <string name="title_activity_settings">Settings</string>

    <string name="theme_title">Theme</string>
    <string name="theme_dark">dark</string>
    <string name="theme_light">light</string>

    <string name="lang_title">Language</string>
    <string name="font_size_title">Font size</string>

    <string name="clear_all">Clear app data</string>
    <string name="settings">settings</string>

    <string name="colour">Colour</string>
    <string name="colour_red">red</string>
    <string name="colour_green">green</string>
    <string name="colour_blue">blue</string>
</resources>