<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient"
    tools:context=".TimerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/stepCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/upper_set"
            android:textColor="@color/whiteTransparent50"
            android:textSize="34sp"
            app:fontFamily="@font/montserrat" />

        <TextView
            android:id="@+id/timeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="54sp"
            app:fontFamily="@font/montserrat" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="370dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/replayB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@color/transparent"
            android:contentDescription="@string/desc_replay"
            app:srcCompat="@drawable/ic_replay_24px" />

        <ImageButton
            android:id="@+id/playPauseB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:contentDescription="@string/desc_pause_play"
            app:srcCompat="@drawable/ic_pause_24px"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/stopB"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/transparent"
            android:contentDescription="@string/desc_pause_play"
            app:srcCompat="@drawable/ic_stop_24px" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="290dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/beforeB"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/desc_pause_play"
            app:srcCompat="@drawable/ic_baseline_navigate_before" />

        <TextView
            android:id="@+id/stepTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/upper_work_it"
            android:textColor="@color/whiteTransparent50"
            android:textSize="34sp"
            app:fontFamily="@font/montserrat" />

        <ImageButton
            android:id="@+id/nextB"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/desc_pause_play"
            app:srcCompat="@drawable/ic_baseline_navigate_next" />

    y</LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/phasesListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:gravity="center">

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>